--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-    <h1>vai ser uma imagem aqui</h1>   
-<ul>
-    <li>escola</li>
-    <li>estudante</li>
+    <img src="alurastart logo.png" alt="logo da alura start"> 
+    <ul>
+       <li>escola</li>
+       <li>estudante</li>
 </ul>  
    </header>
     
