--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
                 gigantes se enfrentando através do futebol.</p>
             <p class="escola-texto-dois">A grande campeã dela é o Real Madrid com 14.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="">
+        <img class="escola-imagem" src="oreiuda).jpeg" alt="">
     </section>
 
     <section id="estudante">
-        <h2 class="estudante-titulo">Quem são um dos jogadores?</h2>
+        <h2 class="estudante-titulo">Quais são as novidades?</h2>
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="images (1).jpeg" alt="foto do marcelo">
-                <h3 class="estudante-nome">Messi</h3>
-                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
+                <img class="estudante-imagem" src="d02ad900-5156-4536-9dac-9002cb662e54 1.png" alt="foto do marcelo">
+                <h3 class="estudante-nome">Tênis OUS Imigrante Pérola Imperial</h3>
+                <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="twitter.png"
                         alt="icone github"></a>
-                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
+                <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="tiktok.png"
                         alt="icone linkedin"></a>
                 <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="cristiano_ronaldo_celebrates_his_fifth_title.avif" alt="foto da gabi">
-                <h3 class="estudante-nome">CR7</h3>
+                <img class="estudante-imagem" src="b59bdb0d-a497-47c6-a7de-58687f5df502 1.png" alt="foto da gabi">
+                <h3 class="estudante-nome">Tênis Nike Court Vision</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
@@ -55,8 +55,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-                <h3 class="estudante-nome">Lizandra</h3>
+                <img class="estudante-imagem" src="ney.jpeg" alt="foto da lizandra">
+                <h3 class="estudante-nome">Neymar</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
@@ -67,8 +67,8 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-                <h3 class="estudante-nome">Joice</h3>
+                <img class="estudante-imagem" src="couto.jpeg" alt="foto da joice">
+                <h3 class="estudante-nome">Coutinho</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
@@ -77,8 +77,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-                <h3 class="estudante-nome">Maria</h3>
+                <img class="estudante-imagem" src="vini).jpeg" alt="foto da maria">
+                <h3 class="estudante-nome">Vini JR</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
@@ -87,7 +87,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
+                <img class="estudante-imagem" src="1dcbef0a-6a19-46a3-8c64-d6b2d228da57 1.png" alt="foto da olhe">
                 <h3 class="estudante-nome">Olivia</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
