--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="images.jpeg" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="WhatsApp Image 2024-03-08 at 08.06 1.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#escola"></a></li>
-            <li class="cabecalho-lista-item"><a href="#estudante"></a></li>
+            <li class="cabecalho-lista-item"><a href="#saiba mais"></a></li>
+            <li class="cabecalho-lista-item"><a href="#increva-se"></a></li>
         </ul>
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre os jogadores da Champions League</h2>
-            <p class="escola-texto-um">A League dos Campeões  foi fundada em 1955 e tem como objetivo nos proporcionar momentos incrível,
-                gigantes se enfrentando através do futebol.</p>
-            <p class="escola-texto-dois">A grande campeã dela é o Real Madrid com 14.</p>
+            <h2 class="escola-titulo">Sobre os nossos lançamentos?</h2>
+            <p class="escola-texto-um">A nossa loja Primme Flow foi fundada em 1999 dia 25 de Agosto por 7 amigos.</p>
+            <p class="escola-texto-dois"></p>
         </div>
         <img class="escola-imagem" src="oreiuda).jpeg" alt="">
     </section>
@@ -38,84 +37,85 @@
                 <img class="estudante-imagem" src="d02ad900-5156-4536-9dac-9002cb662e54 1.png" alt="foto do marcelo">
                 <h3 class="estudante-nome">Tênis OUS Imigrante Pérola Imperial</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="twitter.png"
-                        alt="icone github"></a>
+                        alt=""></a>
                 <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="tiktok.png"
-                        alt="icone linkedin"></a>
+                        alt=""></a>
                 <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="b59bdb0d-a497-47c6-a7de-58687f5df502 1.png" alt="foto da gabi">
                 <h3 class="estudante-nome">Tênis Nike Court Vision</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
+                        alt=""></a>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
+                        src="linkedin.png" alt=""></a>
                 <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="ney.jpeg" alt="foto da lizandra">
-                <h3 class="estudante-nome">Neymar</h3>
+                <img class="estudante-imagem" src="67368d3c-bd01-4f5d-b8be-a0d3410ee08f 1.png" alt="foto da lizandra">
+                <h3 class="estudante-nome">Tênis Ous Imigrante
+                        Glow In The Dark Preto</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
+                        alt=""></a>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
+                        src="linkedin.png" alt=""></a>
                 <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="couto.jpeg" alt="foto da joice">
-                <h3 class="estudante-nome">Coutinho</h3>
+                <img class="estudante-imagem" src="ede23101-0fbe-46f8-bfa6-7fb9ab32616f 1 (1).png" alt="foto da joice">
+                <h3 class="estudante-nome">Tênis OUS UENO</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
+                        alt=""></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
+                        alt=""></a>
                 <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="vini).jpeg" alt="foto da maria">
-                <h3 class="estudante-nome">Vini JR</h3>
+                <img class="estudante-imagem" src="ede23101-0fbe-46f8-bfa6-7fb9ab32616f 2.png" alt="foto da maria">
+                <h3 class="estudante-nome">Tênis OUS Camurça Pérola</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
+                        alt=""></a>
                 <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
+                        alt=""></a>
                 <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="1dcbef0a-6a19-46a3-8c64-d6b2d228da57 1.png" alt="foto da olhe">
-                <h3 class="estudante-nome">Olivia</h3>
-                <img class="estudante-icone" src="github.png" alt="icone github">
+                <h3 class="estudante-nome">Tênis OUS Imigrante Notorio</h3>
+                <img class="estudante-icone" src="github.png" alt="">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
-                        alt="icone linkedin"></a>
+                        alt=""></a>
                 <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-                <h3 class="estudante-nome">Rafaela</h3>
-                <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
+                <img class="estudante-imagem" src="" alt="">
+                <h3 class="estudante-nome"></h3>
+                <a href="https://github.com/rafaelamunhoz12"><img class="" src=""
+                        alt=""></a>
+                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class=""
+                        src="" alt=""></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                        alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-                <h3 class="estudante-nome">Thais</h3>
-                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
-                        alt="icone github"></a>
-                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
-                        src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
-                        alt="icone instagram"></a>
+                <img class="" src="" alt="">
+                <h3 class=""></h3>
+                <a href="https://github.com/Thaispianucci"><img class="" src=""
+                        alt=""></a>
+                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class=""
+                        src="linkedin.png" alt=""></a>
+                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src=""
+                        alt=""></a>
             </div>
 
         </div>
